# dq-python

./: LICENSE  README.md  pyproject.toml
dq_python/: main.py
tests/: test_dq.py
